src/objects/ResidualIncome__c.object
<CustomObject>
    <fields>
        <fullName>Family_Size__c</fullName>
        <label>Family Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MidWest__c</fullName>
        <label>Mid West Residual</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NorthEast__c</fullName>
        <label>North East Residual Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>South__c</fullName>
        <label>South Residual Income</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>West__c</fullName>
        <label>West Residual Income</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id - Used to script data movement between orgs</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>Cash Flow Income</description>
    <label>Residual Income</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>Row Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Residual Incomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MidWest__c</columns>
        <columns>NorthEast__c</columns>
        <columns>South__c</columns>
        <columns>West__c</columns>
        <columns>Family_Size__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>